fixing bugs with css overlap and other react conversion things

--- a/src/calendar/calendar.css
+++ b/src/calendar/calendar.css
@@ -1,6 +1,6 @@
 ul {list-style-type: none;}
 
-main {
+.calendar-main {
     flex: 1;
 
     min-width: 600px;
